--- a/proyek_analisis_sentimen.ipynb
+++ b/proyek_analisis_sentimen.ipynb
@@ -4,13 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Scrapping"
+    "# Import libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pd.options.mode.chained_assignment = None  \n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import accuracy_score\n",
+    "import datetime as dt \n",
+    "import re\n",
+    "import string\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "seed = 0\n",
+    "np.random.seed(seed) "
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ml-learning",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
