Add some data cleaning steps

--- a/proyek_analisis_sentimen.ipynb
+++ b/proyek_analisis_sentimen.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,7 @@
     "import string\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
+    "import emoji\n",
     "seed = 0\n",
     "np.random.seed(seed) "
    ]
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +190,7 @@
        "4                  NaN  2024-10-29 11:12:16          NaN       NaN        NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -300,27 +301,13 @@
        "(33428, 11)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clean_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Text Labelling"
    ]
   },
   {
@@ -453,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +514,7 @@
        "4                     storage game amazing loved lot  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,6 +527,12 @@
     "    \n",
     "    # Remove punctuation\n",
     "    text = re.sub(f'[{re.escape(string.punctuation)}]', '', text)\n",
+    "    \n",
+    "    # Remove emojis\n",
+    "    text = emoji.replace_emoji(text, replace='')\n",
+    "\n",
+    "    # Remove White Space\n",
+    "    text = text.strip()\n",
     "    \n",
     "    # Tokenize the text\n",
     "    tokens = word_tokenize(text)\n",
@@ -562,7 +555,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            great game enjoy playing starting crash often\n",
+       "1        game wellmade terms graphics audio gameplay re...\n",
+       "2        game marvelous genshin impact characters uniqu...\n",
+       "3        fold friendly cant aim enemies edge theres roo...\n",
+       "4                           storage game amazing loved lot\n",
+       "                               ...                        \n",
+       "37012                                               aboard\n",
+       "37014                                       beautiful game\n",
+       "37015        dont mind ill downloading giving first rating\n",
+       "37016                                   soro soro jikan da\n",
+       "37017                                                  omg\n",
+       "Name: cleaned_content, Length: 33222, dtype: object"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df['cleaned_content']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -597,144 +621,249 @@
        "      <th>replyContent</th>\n",
        "      <th>repliedAt</th>\n",
        "      <th>appVersion</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>sentiment_score</th>\n",
+       "      <th>sentiment_subjectivity</th>\n",
+       "      <th>sentiment_label</th>\n",
        "      <th>cleaned_content</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>9b1e9713-f88e-4547-be41-b87d840089cc</td>\n",
-       "      <td>A Google user</td>\n",
-       "      <td>https://play-lh.googleusercontent.com/EGemoI2N...</td>\n",
-       "      <td>Great game, and I enjoy playing it, but now it...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.6.0</td>\n",
-       "      <td>2024-10-29 13:45:27</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.6.0</td>\n",
-       "      <td>great game enjoy playing starting crash often</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>057d6353-31e5-4cf1-9a6d-a9947631bece</td>\n",
-       "      <td>A Google user</td>\n",
-       "      <td>https://play-lh.googleusercontent.com/EGemoI2N...</td>\n",
-       "      <td>For me the game itself is very well-made in te...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.6.0</td>\n",
-       "      <td>2024-10-29 13:38:53</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.6.0</td>\n",
-       "      <td>game wellmade terms graphics audio gameplay re...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>a78877c7-5ea4-4689-a72f-e8ead2ac8c3a</td>\n",
-       "      <td>A Google user</td>\n",
-       "      <td>https://play-lh.googleusercontent.com/EGemoI2N...</td>\n",
-       "      <td>This game is as marvelous as Genshin Impact! T...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2.6.0</td>\n",
-       "      <td>2024-10-29 13:31:21</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.6.0</td>\n",
-       "      <td>game marvelous genshin impact characters uniqu...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>59a0b3c8-1b2a-4877-84fb-c76b79b5a924</td>\n",
-       "      <td>A Google user</td>\n",
-       "      <td>https://play-lh.googleusercontent.com/EGemoI2N...</td>\n",
-       "      <td>Not fold friendly. Cant aim at enemies at the ...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.6.0</td>\n",
-       "      <td>2024-10-29 12:48:45</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.6.0</td>\n",
-       "      <td>fold friendly cant aim enemies edge theres roo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>d135b884-683a-4daa-9b2e-d8ef29c69df4</td>\n",
-       "      <td>A Google user</td>\n",
-       "      <td>https://play-lh.googleusercontent.com/EGemoI2N...</td>\n",
-       "      <td>Other than storage this game is amazing I love...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-10-29 11:12:16</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>storage game amazing loved lot</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               reviewId       userName  \\\n",
-       "0  9b1e9713-f88e-4547-be41-b87d840089cc  A Google user   \n",
-       "1  057d6353-31e5-4cf1-9a6d-a9947631bece  A Google user   \n",
-       "2  a78877c7-5ea4-4689-a72f-e8ead2ac8c3a  A Google user   \n",
-       "3  59a0b3c8-1b2a-4877-84fb-c76b79b5a924  A Google user   \n",
-       "4  d135b884-683a-4daa-9b2e-d8ef29c69df4  A Google user   \n",
-       "\n",
-       "                                           userImage  \\\n",
-       "0  https://play-lh.googleusercontent.com/EGemoI2N...   \n",
-       "1  https://play-lh.googleusercontent.com/EGemoI2N...   \n",
-       "2  https://play-lh.googleusercontent.com/EGemoI2N...   \n",
-       "3  https://play-lh.googleusercontent.com/EGemoI2N...   \n",
-       "4  https://play-lh.googleusercontent.com/EGemoI2N...   \n",
-       "\n",
-       "                                             content  score  thumbsUpCount  \\\n",
-       "0  Great game, and I enjoy playing it, but now it...      2              1   \n",
-       "1  For me the game itself is very well-made in te...      5              0   \n",
-       "2  This game is as marvelous as Genshin Impact! T...      5              5   \n",
-       "3  Not fold friendly. Cant aim at enemies at the ...      3              0   \n",
-       "4  Other than storage this game is amazing I love...      5              0   \n",
-       "\n",
-       "  reviewCreatedVersion                   at replyContent repliedAt appVersion  \\\n",
-       "0                2.6.0  2024-10-29 13:45:27          NaN       NaN      2.6.0   \n",
-       "1                2.6.0  2024-10-29 13:38:53          NaN       NaN      2.6.0   \n",
-       "2                2.6.0  2024-10-29 13:31:21          NaN       NaN      2.6.0   \n",
-       "3                2.6.0  2024-10-29 12:48:45          NaN       NaN      2.6.0   \n",
-       "4                  NaN  2024-10-29 11:12:16          NaN       NaN        NaN   \n",
-       "\n",
-       "                                     cleaned_content  \n",
-       "0      great game enjoy playing starting crash often  \n",
-       "1  game wellmade terms graphics audio gameplay re...  \n",
-       "2  game marvelous genshin impact characters uniqu...  \n",
-       "3  fold friendly cant aim enemies edge theres roo...  \n",
-       "4                     storage game amazing loved lot  "
+       "Empty DataFrame\n",
+       "Columns: [reviewId, userName, userImage, content, score, thumbsUpCount, reviewCreatedVersion, at, replyContent, repliedAt, appVersion, sentiment, sentiment_score, sentiment_subjectivity, sentiment_label, cleaned_content]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_df.head()"
+    "# check if there is any empty string in the cleaned_content column\n",
+    "clean_df[clean_df['cleaned_content'] == '']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop rows with empty string in the cleaned_content column\n",
+    "clean_df = clean_df[clean_df['cleaned_content'] != '']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Text Labelling"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# labelling with textblob\n",
+    "from textblob import TextBlob\n",
+    "\n",
+    "def sentiment_score(text):\n",
+    "    analysis = TextBlob(text)\n",
+    "    return analysis.sentiment.polarity\n",
+    "\n",
+    "def sentiment_subjectivity(text):\n",
+    "    analysis = TextBlob(text)\n",
+    "    return analysis.sentiment.subjectivity\n",
+    "\n",
+    "clean_df['sentiment_score'] = clean_df['cleaned_content'].apply(sentiment_score)\n",
+    "clean_df['sentiment_subjectivity'] = clean_df['cleaned_content'].apply(sentiment_subjectivity)\n",
+    "\n",
+    "def sentiment_label(score):\n",
+    "    if score > 0:\n",
+    "        return 'Positive'\n",
+    "    elif score < 0:\n",
+    "        return 'Negative'\n",
+    "    else:\n",
+    "        return 'Neutral'\n",
+    "    \n",
+    "clean_df['sentiment_label'] = clean_df['sentiment_score'].apply(sentiment_label)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cleaned_content</th>\n",
+       "      <th>sentiment_score</th>\n",
+       "      <th>sentiment_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>great game enjoy playing starting crash often</td>\n",
+       "      <td>0.20000</td>\n",
+       "      <td>Positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>game wellmade terms graphics audio gameplay re...</td>\n",
+       "      <td>0.16000</td>\n",
+       "      <td>Positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>game marvelous genshin impact characters uniqu...</td>\n",
+       "      <td>0.35119</td>\n",
+       "      <td>Positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>fold friendly cant aim enemies edge theres roo...</td>\n",
+       "      <td>0.19375</td>\n",
+       "      <td>Positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>storage game amazing loved lot</td>\n",
+       "      <td>0.30000</td>\n",
+       "      <td>Positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37012</th>\n",
+       "      <td>aboard</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37014</th>\n",
+       "      <td>beautiful game</td>\n",
+       "      <td>0.22500</td>\n",
+       "      <td>Positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37015</th>\n",
+       "      <td>dont mind ill downloading giving first rating</td>\n",
+       "      <td>-0.12500</td>\n",
+       "      <td>Negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37016</th>\n",
+       "      <td>soro soro jikan da</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37017</th>\n",
+       "      <td>omg</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>33222 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         cleaned_content  sentiment_score  \\\n",
+       "0          great game enjoy playing starting crash often          0.20000   \n",
+       "1      game wellmade terms graphics audio gameplay re...          0.16000   \n",
+       "2      game marvelous genshin impact characters uniqu...          0.35119   \n",
+       "3      fold friendly cant aim enemies edge theres roo...          0.19375   \n",
+       "4                         storage game amazing loved lot          0.30000   \n",
+       "...                                                  ...              ...   \n",
+       "37012                                             aboard          0.00000   \n",
+       "37014                                     beautiful game          0.22500   \n",
+       "37015      dont mind ill downloading giving first rating         -0.12500   \n",
+       "37016                                 soro soro jikan da          0.00000   \n",
+       "37017                                                omg          0.00000   \n",
+       "\n",
+       "      sentiment_label  \n",
+       "0            Positive  \n",
+       "1            Positive  \n",
+       "2            Positive  \n",
+       "3            Positive  \n",
+       "4            Positive  \n",
+       "...               ...  \n",
+       "37012         Neutral  \n",
+       "37014        Positive  \n",
+       "37015        Negative  \n",
+       "37016         Neutral  \n",
+       "37017         Neutral  \n",
+       "\n",
+       "[33222 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df[['cleaned_content','sentiment_score','sentiment_label']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sentiment_label\n",
+       "Positive    18315\n",
+       "Negative     8604\n",
+       "Neutral      6303\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count the number of positive, negative and neutral reviews\n",
+    "clean_df['sentiment_label'].value_counts()"
+   ]
   }
  ],
  "metadata": {
